# swift-menu

./: .editorconfig  .gitignore  README.md  meson.build
data/: com.github.ryankugel.swift-menu.gschema.xml  meson.build
debian/: changelog  control  copyright  postinst  rules
meson/: post_install.py
src/: Constants.vala  SwiftMenu.plugin  SwiftMenu.vala  meson.build
src/Services/: LockInterface.vala  LoginInterface.vala  SessionInterface.vala  UserInterface.vala
src/Widgets/: IconButton.vala  IconPicker.vala  MenuSettings.vala  Popover.vala
